--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ torch = "^1.12.1"
 torchvision = "^0.13.1"
 progress = "^1.6"
 timm = "^0.6.7"
+ipykernel = "^6.16.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
