--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,14 @@ authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-opencv-contrib-python = "^4.6.0"
 torch = "^1.12.1"
 torchvision = "^0.13.1"
 progress = "^1.6"
 timm = "^0.6.7"
 ipykernel = "^6.16.1"
 lxml = "^4.9.1"
+pandas = "^1.5.1"
+opencv-contrib-python-headless = "^4.6.0.66"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
